# ComfyUI-ZImageDit

./: .gitignore  KT.md  README.md  README.txt  __init__.py  example_workflow.json  generator_node.py  inspect_zimage.py  install.py  install_sdnq.bat  loader_node.py  loader_node_calibrated.py  loader_node_calibrated_compile.py  pyproject.toml  qdit_calibration.py  quantization_helper.py  quantize_zimage.py  requirements.txt  sdnq_nodes.py  setup_windows.bat  test_device.py
.github/workflows/: publish.yml
other/: benchmark_guide.md  comfy_quant_nodes.py  generator_node - Copia.py  lightweight_nodes.py  requirements.txt.dev
