[project]
name = "zimagedit"
description = "Unofficial diffusers integration of the official SDNQ pipeline to run in ComfyUI. (Description by CC)"
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["diffusers>=0.35.2", "transformers>=4.56.1", "safetensors>=0.4.0", "quanto>=0.1.0"]

[project.urls]
Repository = "https://github.com/erosDiffusion/ComfyUI-ZImageDit"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/erosDiffusion/ComfyUI-ZImageDit/wiki"
"Bug Tracker" = "https://github.com/erosDiffusion/ComfyUI-ZImageDit/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-ZImageDit"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

